# Universal_Robots_ROS_controllers_cartesian

./: .rosinstall  CMakeLists.txt  README.md  cartesian_trajectory_controller_plugin.xml  package.xml
.github/workflows/: ci.yml
cartesian_interface/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cartesian_interface/include/cartesian_interface/: cartesian_command_interface.h  cartesian_state_handle.h  speed_scaling_interface.h
cartesian_interface/test/: cartesian_command_interface_test.cpp  cartesian_state_interface_test.cpp
cartesian_trajectory_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  cartesian_trajectory_controller_plugin.xml  ik_solver_example_plugin.xml  package.xml
cartesian_trajectory_controller/include/cartesian_trajectory_controller/: cartesian_trajectory_controller.h  cartesian_trajectory_controller.hpp  control_policies.h  control_policies.hpp  ik_solver_example.h
cartesian_trajectory_controller/include/inverse_kinematics/: ik_solver_base.h  ik_solver_example.h
cartesian_trajectory_controller/src/: cartesian_trajectory_controller.cpp  ik_solver_example.cpp
cartesian_trajectory_controller/test/: config.yaml  controllers.yaml  robot.urdf.xacro  setup.xml  test_controller.py
cartesian_trajectory_interpolation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cartesian_trajectory_interpolation/include/cartesian_trajectory_interpolation/: cartesian_state.h  cartesian_trajectory.h  cartesian_trajectory_segment.h
cartesian_trajectory_interpolation/src/: cartesian_state.cpp  cartesian_trajectory.cpp  cartesian_trajectory_segment.cpp
cartesian_trajectory_interpolation/test/: cartesian_state_test.cpp  cartesian_trajectory_segment_test.cpp  cartesian_trajectory_test.cpp
include/cartesian_interface/: cartesian_command_interface.h  cartesian_state_handle.h
include/cartesian_trajectory_controller/: cartesian_trajectory_controller.h  cartesian_trajectory_controller.hpp  control_policies.h  control_policies.hpp
include/cartesian_trajectory_interpolation/: cartesian_state.h  cartesian_trajectory.h  cartesian_trajectory_segment.h
include/inverse_kinematics/: ik_solver_example.h
include/twist_controller/: twist_controller.h
ros_control_cartesian/: CMakeLists.txt  package.xml
ros_controllers_cartesian/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/: cartesian_state.cpp  cartesian_trajectory.cpp  cartesian_trajectory_controller.cpp  cartesian_trajectory_segment.cpp  twist_controller.cpp
test/: cartesian_command_interface_test.cpp  cartesian_state_interface_test.cpp  cartesian_state_test.cpp  cartesian_trajectory_controller.test  cartesian_trajectory_segment_test.cpp  cartesian_trajectory_test.cpp  controllers.yaml  setup.xml  test_controller.py  visualization.rviz
twist_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  twist_controller_plugin.xml
twist_controller/cfg/: TwistController.cfg
twist_controller/include/twist_controller/: twist_controller.h
twist_controller/src/: twist_controller.cpp
