<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cartesian_interface</name>
  <version>0.1.5</version>
  <description>Defines a hardware interface to send Cartesian commands to a robot hardware and read
    Cartesian states.</description>

  <maintainer email="mauch@fzi.de">Felix Exner</maintainer>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/cartesian_interface</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- We have a header-only package but unit tests require these. -->
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>geometry_msgs</depend>

  <test_depend>rosunit</test_depend>
</package>
