<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cartesian_trajectory_controller</name>
  <version>0.1.5</version>
  <description>A Cartesian trajectory controller with multiple hardware interface support</description>

  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/cartesian_trajectory_controller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cartesian_interface</build_depend>
  <build_depend>cartesian_trajectory_interpolation</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>speed_scaling_interface</build_depend>

  <build_export_depend>cartesian_interface</build_export_depend>
  <build_export_depend>cartesian_trajectory_interpolation</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>speed_scaling_interface</build_export_depend>

  <exec_depend>cartesian_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>speed_scaling_interface</exec_depend>

  <test_depend>actionlib</test_depend>
  <test_depend>actionlib_msgs</test_depend>
  <test_depend>control_msgs</test_depend>
  <test_depend>controller_manager_msgs</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>joint_trajectory_controller</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>ros_control_boilerplate</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>trajectory_msgs</test_depend>
  <test_depend>xacro</test_depend>

<!-- Required for pluginlib's export to the controller_interface package -->
  <exec_depend>controller_interface</exec_depend>

  <export>
    <!-- Put the cartesian_trajectory_controllers to the other ROS controllers.
    To check if the export was successful, use
    rospack plugins - -attrib=plugin controller_interface
    -->
    <controller_interface plugin="${prefix}/cartesian_trajectory_controller_plugin.xml"/>

    <!--
    Use
    rospack plugins - -attrib=plugin cartesian_trajectory_controller
    to check for available IK solvers
    -->
    <cartesian_trajectory_controller plugin="${prefix}/ik_solver_example_plugin.xml"/>
  </export>
</package>
