<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cartesian_trajectory_interpolation</name>
  <version>0.1.5</version>
  <description>Cartesian trajectory interpolation as a standalone library</description>

  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/cartesian_trajectory_interpolation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cartesian_control_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cartesian_control_msgs</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <build_export_depend>joint_trajectory_controller</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <test_depend>rosunit</test_depend>
</package>
