<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_controllers_cartesian</name>
  <version>0.1.5</version>
  <description>Metapackage for Cartesian ROS controllers</description>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>

  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/ros_controllers_cartesian</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartesian_interface</exec_depend>
  <exec_depend>cartesian_trajectory_controller</exec_depend>
  <exec_depend>cartesian_trajectory_interpolation</exec_depend>
  <exec_depend>twist_controller</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
